--- a/src/lib/style/app.scss
+++ b/src/lib/style/app.scss
@@ -219,6 +219,23 @@ header img {
     box-shadow: 0rem 0.25rem 0.25rem black;
 }
 
+/* code about us*/
+input {
+    margin-top: 1em;
+    height: 1.8em
+};
+button {
+    margin: 1em;
+}
+textarea {
+    margin-top: 1em;
+    height: 10em;
+    width: 18em;
+}
+p {
+    margin: 0.8em;
+}
+
 /* code homepage */   
 
 // Responsive Desktop
