--- a/src/lib/style/app.scss
+++ b/src/lib/style/app.scss
@@ -650,6 +650,12 @@ textarea {
     flex-direction: row;
     justify-content: space-around;   
 }
+
+.socialicons img {
+    margin-top: 1rem;
+    width: 2rem;
+    height: 2rem;
+}
 /** ================ End Footer ================ **/
 
 /** ================ Start Responsive Desktop ================ **/
