--- a/src/lib/style/app.scss
+++ b/src/lib/style/app.scss
@@ -15,9 +15,14 @@
     src: url(../../assets/fonts/Chocolatee.ttf) format('truetype');
 }
 
- @font-face {
+@font-face {
     font-family: Something-in-the-cloud;
     src: url(../../assets/fonts/Something-in-the-cloud.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: Amatic;
+    src: url(../../assets/fonts/Amatic.ttf) format('truetype');
 }
 
 :root {
@@ -28,64 +33,41 @@
     --background-body: #ffffff;
     --brown: #B36235;
     --beige: #D88D60;
-    --button: #FFBE98;
-    --background-container: #FFD5BD;
+    --backgroundcomponent: #FFBE98;
+    --backgroundsection: #FFD5BD;
     --dark-red: #C42B2B;
     --red: #DC5151;
     --pink: #FF8080;
     --light-pink: #FFA6A6;
-    --color-text: #030637;
+    --color-titre: #030637;
     --dark-purple: #3C0753;
     --purple: #720455;
     --light-purple: #910A67;
 }
 
 // Titles
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     text-align: center;
-    color: var(--color-text);
+    color: var(--color-titre);
     text-transform: uppercase;
 }
 
 h1 {
-    font-family: Something-in-the-cloud;
-    font-size: 2em;
+    font-family: Amatic;
+    font-weight: bold;
+    font-size: 2rem;
     letter-spacing: 0.2em;
     margin-top: 1.3em;
 }
 
-h2.title {
-    font-family: Chocolatee;
-    font-size: 1.3em;
-    letter-spacing: 0.3em;
-    margin-top: 0.9em;
-    margin-bottom: 0.9em;
+h2 {
+    font-family: Amatic;
+    font-weight: bold;
+    font-size: 1.3rem;
+    letter-spacing: 0.3rem;
+    margin-top: 0.9rem;
+    margin-bottom: 0.9rem;
 }
-
-/** ================ End Global Style ================ **/
-
-/** ================ Start Components ================ **/
-.backgroundcomponent {
-    background-color: var(--button);
-    position: relative;
-    box-shadow: 0.25rem 0.25rem 0.25rem 0.25rem black;
-}
-
-.backgroundsection {
-    background-color: var(--background-container);
-    margin: 1.5rem;
-    padding: 1rem;
-    text-align: center;
-    border-radius: 0.5rem;
-    box-shadow: 0rem 0.25rem 0.25rem black;
-}
-
-/** ================ End Components ================**/
 
 input {
     margin-top: 1em;
@@ -100,197 +82,31 @@ input {
 img {
     border-radius: 1.2em;
 }
+/** ================ End Global Style ================ **/
 
-/** ================ Start Header ================**/
-.header  {
-    background-color:var(--button);
-    box-shadow: 0rem 0.25rem 0.25rem black;
+/** ================ Start Sections ================ **/
+.backgroundcomponent {
+    background-color: var(--backgroundcomponent);
+    box-shadow: 0.10rem 0.10rem 0.30rem 0.20rem black;
 }
 
+.backgroundsection {
+    background-color: var(--backgroundsection);
+    margin: 1.5rem;
+    padding: 1rem;
+    text-align: center;
+    border-radius: 0.5rem;
+    box-shadow: 0rem 0.25rem 0.25rem black;
+}
+/** ================ End Sections ================**/
+
+/** ================ Start Header ================**/
 header img {
     padding-bottom: 0.2rem;
     width: 4rem;
     display: block;
     margin: auto;
 }
-
-/* Start Burger */
-$items: 4;
-$transition-duration: 0.5s;
-$transition-delay: 0.05s;
-
-.container {
-    position: relative;
-    width: 100wh;
-    height: 5rem;
-}
-
-/* Toggle Functionality */
-#toggle {
-    display: none; //hides the checkbox
-}
-
-// Styles for the 'open' state, if the checkbox is checked
-#toggle:checked {
-    //Any element you need to change the style if menu is open goes here, using the sibling selector (~)
-    &~.toggle-container .button-toggle {
-        box-shadow: 0 0 0 12.5rem #D88D60, inset 0 0 0 1.5rem #FFBE98;
-        
-        &:before {
-            transform: translateY(-50%) rotate(45deg) scale(1);
-        }
-
-        &:after {
-            transform: translateY(-50%) rotate(-45deg) scale(1);
-        }
-    }
-
-    // Open Nav
-    &~.nav {
-        margin-bottom: 6.25rem;
-        pointer-events: auto;
-        transform: translate(2rem, 2rem);
-        
-       // Restoring nav items from 'lines' in the menu icon
-        .nav-item {
-            color: var(--color-text);
-            letter-spacing: 0;
-            height: 2.5rem;
-            line-height: 2.5rem;
-            margin-top: 0;
-            opacity: 1;
-            transform: scaleY(1);
-            transition: $transition-duration, opacity 0.1s;
-            
-
-            // Setting delays for the nav items in open transition
-            @for $i from 1 through $items {
-                &:nth-child(#{$i}) {
-                    $delay: (
-                        $items - $i) * $transition-delay;
-                    transition-delay: $delay;
-
-                    &:before {
-                        transition-delay: $delay;
-                    }
-                }
-            }
-
-            // Hide the lines
-            &:before {
-                opacity: 0;
-            }
-            
-            &:hover{
-                background-color: #DC5151 ;
-            }
-        
-            &:active {
-                color: #3C0753;
-            }
-        }
-    }
-}
-
-/* Toggle Button */
-.button-toggle {
-    position: absolute;
-    display: inline-block;
-    width: 1.5rem;
-    height: 1.5rem;
-    margin: 1.7rem;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    border-radius: 100%;
-    transition: $transition-duration + 0.1;
-
-    // Shadow on Hover
-    &:hover {
-        box-shadow: 0 0 0 0.5rem rgba(0, 0, 0, 0.1),
-            inset 0 0 0 1.25rem rgba(0, 0, 0, 0.1);
-    }
-
-    &:before, &:after {
-        position: absolute;
-        content: '';
-        top: 50%;
-        left: 0;
-        width: 100%;
-        height: 0.12rem;
-        background-color: var(--color-text);
-        border-radius: 0.31rem;
-        transition: $transition-duration;
-    }
-    &:before {
-        transform: translateY(-50%) rotate(45deg) scale(0);
-    }
-    
-    &:after {
-        transform: translateY(50%) rotate(-45deg) scale(0);
-        
-    }
-}
-
-/* Menu */
-.nav {
-    display: inline-block;
-    margin: 1.56rem 1.56rem 1.25rem;
-    pointer-events: none;
-    transition: $transition-duration;
-}
-
-// Showing nav items as lines, making up the hamburger menu icon
-.nav-item {
-    position: relative;
-    display: inline-block;
-    float: left;
-    clear: both;
-    color: transparent;
-    font-size: 14px;
-    letter-spacing: -6.2px;
-    height: 7px;
-    line-height: 7px;
-    text-transform: uppercase;
-    white-space: nowrap;
-    transform: scaleY(0.2);
-    transition: $transition-duration, opacity 1s;
-    border-radius: 90%;
-    // font-family: Madina;
-
-    //Set delays for the nav items in close transition
-    @for $i from 1 through $items {
-        &:nth-child(#{$i}) {
-            $delay: (
-                $i - 1) * $transition-delay;
-            transition-delay: $delay;
-
-            &:before {
-                transition-delay: $delay;
-            }
-        }
-    }
-
-    // Adjusting the fourth element onwards
-    &:nth-child(n + 4) {
-        letter-spacing: -8px;
-        margin-top: -7px;
-        opacity: 0;
-    }
-
-    &:before {
-        position: absolute;
-        content: '';
-        top: 50%;
-        left: 0;
-        width: 100%;
-        height: 0.12rem;
-        background-color: var(--color-text);
-        transform: translateY(-50%) scaleY(5);
-        transition: $transition-duration;
-    }
-}
-/* End Burger */
 
 .burgersearch {
     position: absolute;
@@ -329,17 +145,17 @@ input[type="text"] {
     font-weight: 100;
     border: noheader img;
     outline: none;
-    color: var(--color-text
+    color: var(--color-titre
     );
-padding-right: 2rem;
-width: 0px;
-position: absolute;
-top: 0;
-right: 0;
-background: none;
-z-index: 3;
-transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
-cursor: pointer;
+    padding-right: 2rem;
+    width: 0px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: none;
+    z-index: 3;
+    transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+    cursor: pointer;
 }
 
 // search opening
@@ -353,7 +169,7 @@ input[type="submit"] {
     height: 2.5rem;
     width: 2rem;
     display: inline-block;
-    color: var(--color-text);
+    color: var(--color-titre);
     float: right;
     background: url(../../assets/images/logos/search.svg) center center no-repeat;
     background-size: 1.6rem;
@@ -366,7 +182,6 @@ input[type="submit"] {
     cursor: pointer;
     transition: opacity .4s ease;
 }
-
 /** ================ End Header ================ **/
 
 /** ================ Start Homepage ================ **/
@@ -435,7 +250,7 @@ $nb-slides: 4;
     width: $dot-size;
     height: $dot-size;
     opacity: .6;
-    background-color: var(--brown);
+    background-color: var(--red);
     border-radius: 50%;
     transition: .4s;
 
@@ -532,17 +347,16 @@ $nb-slides: 4;
 /** ================ End Homepage ================ **/ 
 
 /** ================  Start Recipes/Reviews ================**/
-
 .pagination {
     margin: 1rem;
     font-style: italic;
     font-size : 1rem;
     border: none;
-    background-color: var(--background-container);
+    background-color: var(--backgroundsection);
 }
 
 .filter {
-    background-color: #B36235;
+    background-color: var(--red);
     border-radius: 0.8rem;
     color: var(--background-body);
     margin: 0.5rem;
@@ -578,13 +392,12 @@ $nb-slides: 4;
 
 .recipename, .authorname, .ingredientsList, .todoList, #closeBtnAccordion, 
 .headerReviewsAccordion, .reviewname, .footerReviewsAccordion, .ourOpinion  {
-    background-color: var(--background-container);
+    background-color: var(--backgroundsection);
 }
 /** ================  End Recipes/Reviews ================**/
 
 /** ================ Start Recipes ================ **/ 
 .formrecipes  {
-
     background-color: var(--brown);
     border-radius: 0.8rem;
     color: var(--background-body);
@@ -613,7 +426,7 @@ $nb-slides: 4;
 
 .answer p,
 .answer li {
-    color: var(--color-text);
+    color: var(--color-titre);
     font-size: 15px;
     padding: 2rem;
 }
@@ -757,8 +570,8 @@ textarea {
     min-width: 8.23em;
     text-decoration: none;
     font-size: 1.25rem;
-    background-color: #B36235;
-    color: #ffd5bd;
+    background-color: var(--brown);
+    color: var(--backgroundsection);
     height: 2em;
 }
 
@@ -779,13 +592,13 @@ textarea {
 .button:before {
     top: -25%;
     left: 20%;
-    background-color: #B36235;
+    background-color: var(--brown);
 }
 
 .button:after {
     bottom: -25%;
     right: 20%;
-    background-color: #B36235;
+    background-color: var(--brown);
 }
 
 .button:hover:before,
@@ -845,7 +658,7 @@ textarea {
     justify-content: center;
     display: block;
     color: #fff;
-    background: #B36235;
+    background: var(--dark-red);
     font-size: 1em;
     font-weight: bold;
     margin-top: 1.2rem;
@@ -858,7 +671,7 @@ textarea {
 
 .login {
     height: 28.75rem;
-    background: #FFBE98;
+    background: var(--pink);
     border-radius: 60% / 10%;
     transform: translateY(-180px);
     transition: .8s ease-in-out;
@@ -885,8 +698,7 @@ textarea {
 
 /** ================ Start Footer ================ **/
 .logofooter {
-    height: 6rem;
-    width: 6rem;
+    width: 4rem;
     margin-top: 0.5rem;
     margin-left: 0.5rem;
     object-fit: cover;
@@ -895,11 +707,8 @@ textarea {
 .linksfooter {
     width: 18rem;
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
-    padding-left: 6rem;
-    padding-bottom: 1rem;
-    padding-top: 2rem;
+    padding: 1rem 0rem 1rem 5rem;
 }
 
 .navfooter {
@@ -909,24 +718,205 @@ textarea {
 }
 
 .socialicons {
-    margin-left: 6rem;
-    margin-top: -6rem;
-    padding-bottom: 1rem;
-    width: 12rem;
-    height: 2rem;
+    margin-left: 4rem;
+    margin-top: -4rem;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
 }
 
+.socialicons img {
+    width: 2.4rem;
+    margin-left: 1rem;
+}
 /** ================ End Footer ================ **/
+
+/** ================ Start Responsive Mobile ================ **/
+@media screen and (max-width:768px) {
+    /**Start burger**/ 
+    $items: 4;
+    $transition-duration: 0.5s;
+    $transition-delay: 0.05s;
+
+    .container {
+        position: relative;
+        height: 5rem;
+    }
+
+    /* Toggle Functionality */
+    #toggle {
+        display: none; //hides the checkbox
+    }
+
+    // Styles for the 'open' state, if the checkbox is checked
+    #toggle:checked {
+        //Any element you need to change the style if menu is open goes here, using the sibling selector (~)
+        &~.toggle-container .button-toggle {
+            box-shadow: 0 0 0 12.5rem #D88D60, inset 0 0 0 1.5rem #D88D60;
+            
+            &:before {
+                transform: translateY(-50%) rotate(45deg) scale(1);
+            }
+
+            &:after {
+                transform: translateY(-50%) rotate(-45deg) scale(1);
+            }
+        }
+
+        // Open Nav
+        &~.nav {
+            margin-bottom: 6.25rem;
+            pointer-events: auto;
+            transform: translate(2rem, 2rem);
+            
+        // Restoring nav items from 'lines' in the menu icon
+            .nav-item {
+                color: var(--color-titre);
+                letter-spacing: 0;
+                height: 2.5rem;
+                line-height: 2.5rem;
+                margin-top: 0;
+                opacity: 1;
+                transform: scaleY(1);
+                transition: $transition-duration, opacity 0.1s;
+
+                // Setting delays for the nav items in open transition
+                @for $i from 1 through $items {
+                    &:nth-child(#{$i}) {
+                        $delay: (
+                            $items - $i) * $transition-delay;
+                        transition-delay: $delay;
+
+                        &:before {
+                            transition-delay: $delay;
+                        }
+                    }
+                }
+
+                // Hide the lines
+                &:before {
+                    opacity: 0;
+                }
+                
+                &:hover{
+                    background-color: var(--red);
+                }
+            
+                &:active {
+                    color: var(--dark-purple);
+                }
+            }
+        }
+    }
+
+    /* Toggle Button */
+    .button-toggle {
+        position: absolute;
+        display: inline-block;
+        width: 1.5rem;
+        height: 1.5rem;
+        margin: 1.7rem;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        border-radius: 100%;
+        transition: $transition-duration + 0.1;
+
+        // Shadow on Hover
+        &:hover {
+            box-shadow: 0 0 0 0.5rem rgba(0, 0, 0, 0.1),
+                inset 0 0 0 1.25rem rgba(0, 0, 0, 0.1);
+        }
+
+        &:before, &:after {
+            position: absolute;
+            content: '';
+            top: 50%;
+            left: 0;
+            width: 100%;
+            height: 0.12rem;
+            background-color: var(--color-titre);
+            border-radius: 0.31rem;
+            transition: $transition-duration;
+        }
+        &:before {
+            transform: translateY(-50%) rotate(45deg) scale(0);
+        }
+        
+        &:after {
+            transform: translateY(50%) rotate(-45deg) scale(0);
+            
+        }
+    }
+
+    /* Menu */
+    .nav {
+        display: inline-block;
+        margin: 1.56rem 1.56rem 1.25rem;
+        pointer-events: none;
+        transition: $transition-duration;
+    }
+
+    // Showing nav items as lines, making up the hamburger menu icon
+    .nav-item {
+        position: relative;
+        display: inline-block;
+        float: left;
+        clear: both;
+        color: transparent;
+        font-size: 14px;
+        letter-spacing: -6.2px;
+        height: 7px;
+        line-height: 7px;
+        text-transform: uppercase;
+        white-space: nowrap;
+        transform: scaleY(0.2);
+        transition: $transition-duration, opacity 1s;
+        border-radius: 90%;
+        // font-family: Madina;
+
+        //Set delays for the nav items in close transition
+        @for $i from 1 through $items {
+            &:nth-child(#{$i}) {
+                $delay: (
+                    $i - 1) * $transition-delay;
+                transition-delay: $delay;
+
+                &:before {
+                    transition-delay: $delay;
+                }
+            }
+        }
+
+        // Adjusting the fourth element onwards
+        &:nth-child(n + 4) {
+            letter-spacing: -8px;
+            margin-top: -7px;
+            opacity: 0;
+        }
+
+        &:before {
+            position: absolute;
+            content: '';
+            top: 50%;
+            left: 0;
+            width: 100%;
+            height: 0.12rem;
+            background-color: var(--color-titre);
+            transform: translateY(-50%) scaleY(5);
+            transition: $transition-duration;
+        }
+    }
+    /**End burger**/
+}
 
 /** ================ Start Responsive Desktop ================ **/
 @media screen and (min-width: 769px) {
-
     /** header **/
-    header nav {
-        display: contents;
+    .nav-item {
+    
+    }
+
+    header input {
+        display: none;
     }
     
     .burgersearch {
@@ -940,39 +930,9 @@ textarea {
     #search_submit {
         background-size: 1.5rem;
     }
-
-    // remove burger and recover links
-    // .nav-item {
-    //     &:before {
-    //         display: none;
-    //     }
-    // }
-
-    // #toggle,
-    // .toggle-container {
-    //     display: none;
-    // }
-
-    // nav .essai {
-    //     display: flex;/*1*/
-    //     justify-content: space-around;/*3*/
-    //     padding-top: 1rem;
-    // }
-
-    // .essai {
-    //     color: black;
-    //     font-size: 3rem;
-    //     border: #000000 1px solid;
-         // padding-left: 0.8rem;
-         // padding-right: 0.8rem;
-        // padding-top: 0.3rem;
-    // }
     /** End header **/
 
-    /** Start Recipes/Reviews**/ 
-    .filter {
-        margin: 1rem;
-    }
+    /** Start Recipes/Reviews**/
 
     .sixFilters {
         display: flex;
@@ -1005,30 +965,5 @@ textarea {
         display: flex;
         flex-direction: column;
         gap: 1em;
-    }
-}
-
-@media screen and (min-width: 1226px) {
-
-    /** Start About us **/
-    .contactNews {
-        display: flex;
-        justify-content: space-evenly;
-    }
-
-    .backgroundsection .left {
-        width: 60%;
-    }
-
-    .backgroundsection .right {
-        width: 30%;
-    }
-}
-
-@media screen and (max-width: 335px) {
-    .backgroundsection {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
     }
 }
