--- a/src/lib/style/app.scss
+++ b/src/lib/style/app.scss
@@ -6,23 +6,18 @@
 }
 
 @font-face {
-    font-family: Madina;
-    src: url(../../assets/fonts/Madina.ttf) format('truetype');
+    font-family: avatarock;
+    src: url(../../assets/fonts/avatarock.ttf) format('truetype');
 }
 
 @font-face {
-    font-family: Chocolatee;
-    src: url(../../assets/fonts/Chocolatee.ttf) format('truetype');
+    font-family: MegantВ-Personal-Use;
+    src: url(../../assets/fonts/MegantВ-Personal-Use.ttf) format('truetype');
 }
 
 @font-face {
-    font-family: Something-in-the-cloud;
-    src: url(../../assets/fonts/Something-in-the-cloud.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: Amatic;
-    src: url(../../assets/fonts/Amatic.ttf) format('truetype');
+    font-family: wind;
+    src: url(../../assets/fonts/wind.ttf) format('truetype');
 }
 
 :root {
@@ -45,6 +40,12 @@
     --light-purple: #910A67;
 }
 
+//picture in the accordeon recipe
+.imgPreview{
+    max-width:15rem;
+    max-height:15rem;
+}
+
 // Titles
 h1, h2, h3, h4, h5, h6 {
     text-align: center;
@@ -53,7 +54,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-family: Amatic;
+    font-family: avatarock;
     font-weight: bold;
     font-size: 2rem;
     letter-spacing: 0.2em;
@@ -61,12 +62,20 @@ h1 {
 }
 
 h2 {
-    font-family: Amatic;
+    font-family: avatarock;
     font-weight: bold;
     font-size: 1.3rem;
     letter-spacing: 0.3rem;
     margin-top: 0.9rem;
     margin-bottom: 0.9rem;
+}
+
+p {
+
+    font-family: wind;
+    font-size: 0.8rem;
+    
+
 }
 
 input {
@@ -88,6 +97,7 @@ img {
 .backgroundcomponent {
     background-color: var(--backgroundcomponent);
     box-shadow: 0.10rem 0.10rem 0.30rem 0.20rem black;
+    
 }
 
 .backgroundsection {
@@ -98,9 +108,17 @@ img {
     border-radius: 0.5rem;
     box-shadow: 0rem 0.25rem 0.25rem black;
 }
+
 /** ================ End Sections ================**/
 
 /** ================ Start Header ================**/
+
+.sticky{
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+
 header img {
     padding-bottom: 0.2rem;
     width: 4rem;
@@ -124,7 +142,7 @@ header img {
 
 input#search {
     padding-top: 0;
-    margin-top: 0;  
+    margin-top: 0;
 }
 
 // search form
@@ -138,32 +156,32 @@ input#search {
     padding: 0;
 }
 
-input[type="text"] {
-    height: 4rem;
-    font-size: 1rem;
-    display: inline-block;
-    font-weight: 100;
-    border: noheader img;
-    outline: none;
-    color: var(--color-titre
-    );
-    padding-right: 2rem;
-    width: 0px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    background: none;
-    z-index: 3;
-    transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
-    cursor: pointer;
-}
+// input[type="text"] {
+//     height: 4rem;
+//     font-size: 1rem;
+//     display: inline-block;
+//     font-weight: 100;
+//     border: noheader img;
+//     outline: none;
+//     color: var(--color-titre
+//     );
+//     padding-right: 2rem;
+//     width: 0px;
+//     position: absolute;
+//     top: 0;
+//     right: 0;
+//     background: none;
+//     z-index: 3;
+//     transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+//     cursor: pointer;
+// }
 
 // search opening
-input[type="text"]:focus {
-    width: 14rem;
-    z-index: 1;
-    cursor: text;
-}
+// input[type="text"]:focus {
+//     width: 14rem;
+//     z-index: 1;
+//     cursor: text;
+// }
 
 input[type="submit"] {
     height: 2.5rem;
@@ -343,8 +361,8 @@ $nb-slides: 4;
         }
     }
 }
-/** ===== End Carousel ==== **/ 
-/** ================ End Homepage ================ **/ 
+/** ===== End Carousel ==== **/
+/** ================ End Homepage ================ **/
 
 /** ================  Start Recipes/Reviews ================**/
 .pagination {
@@ -355,6 +373,90 @@ $nb-slides: 4;
     background-color: var(--backgroundsection);
 }
 
+.framerestaurants, .framerecipes {
+    margin: 10px;
+    text-align: center;
+    height: 15rem;
+    width: 15rem;
+    display: inline-block;
+}
+
+.restaurants, .recipes {
+    height: 8rem;
+    width: 8rem;
+    border-radius: 0.5rem;
+}
+// Accordeons
+.answer {
+    max-height: 0;
+    overflow: hidden;
+    position: relative;
+    background-color: var(--brown);
+    transition: max-height 650ms;
+}
+
+.answer.show {
+    max-height: 100rem;
+}
+
+.imgAccordeon, .blocAccordeon, .ingredientsList, .todoList, .ourOpinion  {
+    border-radius: 0.5rem;
+    box-shadow: 0rem 0.25rem 0.25rem black;
+}
+
+.blocAccordeon, .ingredientsList, .todoList, .ourOpinion  {
+    background-color: var(--backgroundsection);
+}
+
+.headerAccordeon {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin: 1em auto;
+}
+
+.contentAccordeon {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    margin: 1em;
+}
+
+.imgAccordeon {
+    width : 10rem;
+    height : 10rem;
+}
+
+.blocAccordeon {
+    width: 6em;
+    height: 3em;
+}
+
+.answer p {
+    color: var(--color-titre);
+    font-size: 15px;
+    padding: 2rem;
+}
+
+.blocAccordeon, .todoList {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/** ================  End Recipes/Reviews ================**/
+
+/** ================ Start Recipes ================ **/
+.formrecipes  {
+    background-color: var(--brown);
+    border-radius: 0.8rem;
+    color: var(--background-body);
+    padding: 1rem 2rem;
+    margin: 1rem;
+    border: none;
+}
+// Filters
 .filter {
     background-color: var(--red);
     border-radius: 0.8rem;
@@ -369,156 +471,27 @@ $nb-slides: 4;
 .filter p {
     padding-top: 0.5rem;
 }
-
-.framerestaurants, .framerecipes {
-    margin: 10px;
-    text-align: center;
-    height: 15rem;
-    width: 15rem;
-    display: inline-block; 
-}
-
-.restaurants, .recipes {
-    height: 8rem;
-    width: 8rem;   
-    border-radius: 0.5rem;
-}
-
-.answer, .imgRecipeAccordion, .recipename, .authorname, .ingredientsList, .todoList, #closeBtnAccordion 
-.headerReviewsAccordion, .reviewname, .footerReviewsAccordion, .ourOpinion  {
-    border-radius: 0.5rem;
-    box-shadow: 0rem 0.25rem 0.25rem black;
-}
-
-.recipename, .authorname, .ingredientsList, .todoList, #closeBtnAccordion, 
-.headerReviewsAccordion, .reviewname, .footerReviewsAccordion, .ourOpinion  {
-    background-color: var(--backgroundsection);
-}
-/** ================  End Recipes/Reviews ================**/
-
-/** ================ Start Recipes ================ **/ 
-.formrecipes  {
-    background-color: var(--brown);
-    border-radius: 0.8rem;
-    color: var(--background-body);
-    padding: 1rem 2rem;
-    margin: 1rem;
-    border: none;
-}
-
 .categories {
     width: 4em;
     height: 4em;
 }
-
+// Filters
 /** ====Start Accordion Recipes ==== **/
-.answer {
-    max-height: 0;
-    overflow: hidden;
-    position: relative;
-    background-color: var(--brown);
-    transition: max-height 650ms;
-}
 
-.answer.closed {
-    display: none;
-}
+    // .accordion-item:target .answer {
+    //     max-height: 40rem;
+    // }
 
-.answer p,
-.answer li {
-    color: var(--color-titre);
-    font-size: 15px;
-    padding: 2rem;
-}
+    // .accordion-item:target .accordion-link {
+    //     display: none
+    // }
 
-.accordion-item:target .answer {
-    max-height: 40rem;
-}
+    // .accordion-item:target .accordion-link {
+    //     display: block;
+    // }
 
-.accordion-item:target .accordion-link {
-    display: none
-}
-
-.accordion-item:target .accordion-link {
-    display: block;
-}
-
-.headerRecipeAccordion {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 1em auto;
-}
-
-.imgRecipeAccordion {
-    width : 10rem;
-    height : 10rem;
-}
-
-.recipename, .authorname, .ingredientsList, .todoList{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.recipename, .authorname{
-    width: 6em;
-    height:3em;
-}
-
-.footerRecipeAccordion {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    margin: 1em;
-}
-
-#closeBtnAccordion {
-    border: none;
-    width: 7em;
-    margin-left: 8.6em;
-}
 /** ==== End Accordion Recipes ==== **/
 /** ================ End Recipes ================ **/
-
-/** ================ Start Reviews ================ **/
-/** ==== Start Accordion Reviews ==== **/
-
-.headerReviewsAccordion{
-    display: flex;
-    justify-content: center;
-    margin: 1em auto;
-    text-align: center;
-}
-
-.reviewname{
-    text-align: center;
-    width: 13em;
-    height: 5em;
-    display: flex;
-    align-items: center;
-    text-align: left;
-}
-
-.footerReviewsAccordion {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    margin: 1em;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.ourOpinion {
-    width: 13em;
-    height: 10em;
-    padding-top: 0.5em;
-}
-
-/** ==== End Accordion Reviews ==== **/
-/** ================ End Reviews ================ **/
 
 /** ================ Start About us ================ **/
 textarea {
@@ -610,47 +583,6 @@ textarea {
 /** ================ End About us ================ **/
 
 /** ================ Start Logform ================ **/
-.mainlog {
-    height: 31rem;
-    overflow: hidden;
-    border-radius: 0.6rem;
-    box-shadow: 0.313rem 1.25rem 3.125rem #000;
-}
-
-#chk {
-    display: none;
-}
-
-.signup {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.labelLogForm {
-    color: #030637;
-    justify-content: center;
-    display: flex;
-    margin: 3rem;
-    font-family: Madina;
-    font-size: 4rem;
-    cursor: pointer;
-    transition: .5s ease-in-out;
-}
-
-.inputLogForm {
-    width: 60%;
-    height: 2rem;
-    background: #e0dede;
-    justify-content: center;
-    display: flex;
-    margin: 1.2rem auto;
-    padding: 0.6rem;
-    border: none;
-    outline: none;
-    border-radius: 1.2rem;
-}
-
 .buttonlogin {
     width: 60%;
     height: 2.5rem;
@@ -668,32 +600,6 @@ textarea {
     transition: .2s ease-in;
     cursor: pointer;
 }
-
-.login {
-    height: 28.75rem;
-    background: var(--pink);
-    border-radius: 60% / 10%;
-    transform: translateY(-180px);
-    transition: .8s ease-in-out;
-}
-
-.login label {
-    color: #030637;
-    transform: scale(.6);
-}
-
-#chk:checked~.login {
-    transform: translateY(-500px);
-}
-
-#chk:checked~.login label {
-    transform: scale(0.8);
-}
-
-#chk:checked~.signup label {
-    transform: scale(.6);
-}
-
 /** ================ End Logform ================ **/
 
 /** ================ Start Footer ================ **/
@@ -731,7 +637,7 @@ textarea {
 
 /** ================ Start Responsive Mobile ================ **/
 @media screen and (max-width:768px) {
-    /**Start burger**/ 
+    /**Start burger**/
     $items: 4;
     $transition-duration: 0.5s;
     $transition-delay: 0.05s;
@@ -751,7 +657,7 @@ textarea {
         //Any element you need to change the style if menu is open goes here, using the sibling selector (~)
         &~.toggle-container .button-toggle {
             box-shadow: 0 0 0 12.5rem #D88D60, inset 0 0 0 1.5rem #D88D60;
-            
+
             &:before {
                 transform: translateY(-50%) rotate(45deg) scale(1);
             }
@@ -766,7 +672,7 @@ textarea {
             margin-bottom: 6.25rem;
             pointer-events: auto;
             transform: translate(2rem, 2rem);
-            
+
         // Restoring nav items from 'lines' in the menu icon
             .nav-item {
                 color: var(--color-titre);
@@ -795,11 +701,11 @@ textarea {
                 &:before {
                     opacity: 0;
                 }
-                
+
                 &:hover{
                     background-color: var(--red);
                 }
-            
+
                 &:active {
                     color: var(--dark-purple);
                 }
@@ -840,10 +746,10 @@ textarea {
         &:before {
             transform: translateY(-50%) rotate(45deg) scale(0);
         }
-        
+
         &:after {
             transform: translateY(50%) rotate(-45deg) scale(0);
-            
+
         }
     }
 
@@ -912,13 +818,23 @@ textarea {
 @media screen and (min-width: 769px) {
     /** header **/
     .nav-item {
-    
+        // display: contents;
+        // flex-direction: column;
+        // align-items: center;
+        // justify-content: space-between;
+        // position: absolute;
+        // top: 0;
+        // left: 0;
+        // width: 100%;
+        // height: 100vh;
+        // margin: 0;
+        // padding: 0.5rem 1rem;
     }
 
     header input {
         display: none;
     }
-    
+
     .burgersearch {
         margin-bottom: 5em;
     }
@@ -939,9 +855,10 @@ textarea {
         justify-content: center;
     }
 
-    /** End Recipes/Reviews**/ 
+    /** End Recipes/Reviews**/
 
     /** Start About us **/
+    
     .aboutMe {
         display: flex;
     }
@@ -966,4 +883,17 @@ textarea {
         flex-direction: column;
         gap: 1em;
     }
+    
+    /** Start 404 **/
+
+    .background404 {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    /** End 404 **/
+    
 }
+/** ================ End Responsive Desktop ================ **/
