--- a/src/lib/style/app.scss
+++ b/src/lib/style/app.scss
@@ -867,7 +867,7 @@ textarea {
         align-content: center;
         line-height: 2em;
     }
-
+    indent-rainbow
     input#email {
         width: 30em;
     }
