--- a/src/lib/styles/app.scss
+++ b/src/lib/styles/app.scss
@@ -153,32 +153,32 @@ input#search {
     padding: 0;
 }
 
- .search-input[type="text"] {
+.search-input[type="text"] {
     height: 4rem;
     font-size: 1rem;
-     display: inline-block;
-     font-weight: 100;
-     border: noheader img;
-     outline: none;
-     color: var(--color-titre
-     );
-     padding-right: 2rem;
-     width: 0px;
-     position: absolute;
-     top: 0;
-     right: 0;
-     background: none;
-     z-index: 3;
-     transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
-     cursor: pointer;
- }
+    display: inline-block;
+    font-weight: 100;
+    border: noheader img;
+    outline: none;
+    color: var(--color-titre
+    );
+    padding-right: 2rem;
+    width: 0px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: none;
+    z-index: 3;
+    transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+    cursor: pointer;
+}
 
 // search opening
- .search-input[type="text"]:focus {
-     width: 14rem;
-     z-index: 1;
-     cursor: text;
- }
+.search-input[type="text"]:focus {
+    width: 14rem;
+    z-index: 1;
+    cursor: text;
+}
 
 input[type="submit"] {
     height: 2.5rem;
@@ -508,7 +508,7 @@ textarea {
 /** ================ End Footer ================ **/
 
 /** ================ Start Responsive Mobile ================ **/
-@media screen and (max-width:768px) {
+@media (max-width:768px) {
     /**Start burger**/
     $items: 4;
     $transition-duration: 0.5s;
@@ -687,7 +687,7 @@ textarea {
 }
 
 /** ================ Start Responsive Desktop ================ **/
-@media screen and (min-width: 769px) {
+@media (min-width: 769px) {
     /** header **/
     header input {
         display: none;
@@ -782,7 +782,7 @@ textarea {
     transition: 0.7s ease;
     }
 
-    @media screen and (min-width: 1100px) {
+    @media (min-width: 1100px) {
 
         .menu-nav a {
         margin-left: 0.7em;
@@ -795,13 +795,12 @@ textarea {
         }
     }
 
-    @media screen and (min-width: 1400px) {
+    @media (min-width: 1400px) {
         .menu-nav a {
         margin-left: 1em;
         width: 9em;
         }
     }
-    
     /** End Nav Header **/
 }
 /** ================ End Responsive Desktop ================ **/
