--- a/src/lib/styles/app.scss
+++ b/src/lib/styles/app.scss
@@ -103,7 +103,7 @@ img {
 
 /** ================ Start Sections ================ **/
 .backgroundcomponent {
-    background-color: #ff8d97;
+    background-color: var(--violet);
     box-shadow: 0.10rem 0.10rem 0.30rem 0.20rem black;
     
 }
@@ -506,20 +506,20 @@ img {
     width: 5em;
     margin-top: 1em;
     margin-left: 0.4em;
-    background-color: var(--light-green);
-    border: 5px solid var(--apple-green);
-    color: var(--color-titre);
+    background-color: var(--apple-green);
+    border: 5px solid var(--light-green);
+    color: white;
     cursor: pointer;
     }
 
     .menu-nav a:hover{
-    border-radius:10px;
+    border-radius: 1rem;
     background-color: var(--apple-green);
-    color: white;
+    color: var(--color-titre);
     border: 5px solid var(--light-green);
     transform: scale(1.2, 1.2);
     transition: 0.7s ease;
-    margin-left: 0.8rem;
+    margin-left: 0.95rem;
     margin-right: 0.8rem;
     }
 
