test-color-accordion

--- a/src/lib/styles/app.scss
+++ b/src/lib/styles/app.scss
@@ -42,7 +42,7 @@
 
     --apple-green: #39aa39;
     --dark-green: #07533c;
-    --light-green: #c0ffc0;
+    --light-green: #30C889;
     --violet:#8d8dff;
     --light-violet: #9812d2;
     --color-burger: #B98DE1;
